avoid space wrap

--- a/ocp/static/css/coopOcp.css
+++ b/ocp/static/css/coopOcp.css
@@ -229,7 +229,7 @@ li > h4 {
 }
 
 th {
-  background-color: #f0f0da
+  background-color: #f5f5df;
 }
 .entry-row th {
   background-color: inherit;
